# textgrad

./: pyproject.toml
tests/: test_basics.py  test_engines.py
textgrad/: __init__.py  config.py  defaults.py  logger.py  loss.py  model.py  variable.py
textgrad/autograd/: __init__.py  algebra.py  function.py  functional.py  llm_backward_prompts.py  llm_ops.py  multimodal_ops.py  reduce_prompts.py  string_based_ops.py
textgrad/engine/: __init__.py  anthropic.py  base.py  cohere.py  engine_utils.py  gemini.py  groq.py  ollama.py  openai.py  together.py
textgrad/optimizer/: __init__.py  optimizer.py  optimizer_prompts.py
